[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "my-woramate",email = "eciwithice1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery (>=1.10.1,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
